# fluidattacks-universe2

./: .circle.yml.swp  .commitlint-parser-preset.js  .commitlintrc.js  .envrc  .envrc.public  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .lint-terraform.hcl  .mailmap  .os.yml.swp  .overcommit.yml  .pre-commit-config.yaml  .prospector.yml  .reviews.toml  .sonarcloud.properties  .tflint.hcl  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dangerfile  Dockerfile  Dockerfile.builder  Dockerfile.runner  Gemfile  Jenkinsfile  LOC.yaml  MANIFEST.in  Makefile  README.adoc  README.asc  README.md  __init__.py  alg.sh  amz-redirect.sh  appveyor.yml  asserts.py  asserts.sh  (+85 more)
django-apps/casbin-dynamodb-adapter/: setup.cfg
django-apps/casbin-dynamodb-adapter/casbin_dynamodb_adapter/: adapter.py
django-apps/casbin-in-memory-adapter/: setup.cfg
django-apps/casbin-in-memory-adapter/casbin_in_memory_adapter/: __init__.py  adapter.py
forces/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  break_build.py  default.nix  entrypoint.sh  forces.old.py  gitlab-ci.yaml  main.nix  makes.nix  pyproject.toml  secrets-dev.yaml  secrets-prod.yaml
forces/config-development/: pypi-sources.yaml
forces/config-runtime/: main.nix  template.sh
forces/config/development/: main.nix  pypi-deps.yaml  pypi-sources.yaml
forces/config/runtime/: main.nix  pypi-deps.yaml  pypi-sources.yaml  template.sh
forces/config/typing-stubs/: main.nix  pypi-deps.yaml  pypi-sources.yaml
forces/container/: builder.sh  main.nix
forces/forces/: __init__.py  report.py
forces/forces/apis/: __init__.py  git.py  integrates.py
forces/infra/: key-dev.tf  key-prod.tf  main.tf  secrets.tf  users.tf  variables.tf
forces/pipeline/: makes.nix
forces/process-groups/: main.nix
forces/process-groups-break/: main.nix
forces/test/: conftest.py  entrypoint.sh  main.nix
forces/test/cli/: test_.py
observes/code/: __init__.py  ammend_authors.py  compute_bills.py  migration_001_add_seen_at_from_old_data_source.py  pyproject.toml  shared.py  upload.py
observes/code_etl/: .envrc  .gitlab-ci.yml  ammend_authors.py  arch_test.cfg  default.nix  entrypoint.nix  main.nix  migration_001_add_seen_at_from_old_data_source.py  mypy.ini  pyproject.toml  setup.imports.cfg
reviews/: .gitignore  .gitlab-ci.yml  README.md  entrypoint.sh  gitlab-ci.yaml  main.nix  makes.nix  pyproject.toml
reviews/lint/: makes.nix
reviews/pipeline/: makes.nix
reviews/runtime/: main.nix  pypi-deps.yaml  pypi-sources.yaml  template.sh
skims/: .gitattributes  .gitignore  .gitlab-ci.yml  .prospector.yaml  CONTRIBUTING.md  LEGAL.md  LICENSE.md  README.md  SAST.md  TODO.md  build.sh  entrypoint.sh  gitlab-ci.yaml  main.nix  makes.nix  pyproject.toml  settings.cfg  setup.cfg  setup.imports.cfg
skims/arch/: database-design.json
skims/batch/: entrypoint.sh  main.nix  makes.nix
skims/config-runtime/: main.nix
skims/coverage/: entrypoint.sh  main.nix
skims/dev/: makes.nix
skims/doc/: conf.py  index.rst  modules.rst
skims/docs/: intro.md  introduction.md  library.md
skims/infra/: batch.tf  kms_dev.tf  kms_prod.tf  main.tf  makes.nix  s3_data.tf
skims/inputs/: makes.nix
skims/links/: Java9.g4
skims/manifests/: findings.dev.json  findings.dev.lst  findings.json  findings.lst  findings.none.json  findings.none.lst  findings.prod.json  findings.prod.lst  findings.staging.json  findings.staging.lst  queues.json
skims/owasp-benchmark/: main.nix
skims/owasp-benchmark-and-upload/: entrypoint.sh  main.nix
skims/pipeline/: makes.nix
skims/sca/: entrypoint.sh  main.nix
skims/secrets/: dev.yaml  prod.yaml
skims/server/: entrypoint.sh  main.nix
skims/servers/: makes.nix
skims/skims/: __init__.py
skims/static/: translations.yaml
skims/test/: conftest.py  entrypoint.sh  makes.nix  template.sh  test_a_parse_tree_sitter.py  test_aws_iam_structure.py  test_aws_iam_utils.py  test_cli.py  test_core.py  test_findings.py  test_functional.py  test_graph_java.py  test_groups.json  test_html_.py  test_http_headers.py  test_integrates.py  test_libpath_f011.py  test_libpath_sca_methods.py  test_model.py  test_parse_antlr.py  test_parse_antlr_graph.py  test_parse_antlr_parse.py  test_parse_babel.py  test_parse_cfn.py  test_parse_cfn_loader.py  test_parse_cfn_pase.py  test_parse_cfn_pase_yaml.py  test_parse_cfn_structure.py  test_parse_grammar.py  test_parse_hcl2_loader.py  test_parse_hcl2_structure.py  test_parse_java.py  test_parse_java_as_graph.py  test_parse_java_assertions.py  test_parse_java_parse.py  test_parse_java_structure.py  test_sarif.py  test_sca_scheduler.py  test_string.py  test_transformations.py  (+7 more)
skims/tests/: makes.nix
sorts/: .gitignore  .gitlab-ci.yml  README.md  entrypoint.sh  gitlab-ci.yaml  main.nix  makes.nix  pyproject.toml  secrets.yaml  setup.imports.cfg
sorts/.ipynb_checkpoints/: parse-juliet-train-simple-nn-checkpoint.ipynb
sorts/association-execute/: entrypoint.sh  main.nix
sorts/association-rules/: .envrc  default.nix  entrypoint.nix  mypy.ini  pyproject.toml
sorts/config-development/: main.nix  pypi-sources.yaml
sorts/config-runtime/: main.nix
sorts/dev/: makes.nix
sorts/execute/: entrypoint.sh  main.nix
sorts/extract-features/: entrypoint.sh  main.nix
sorts/infra/: kms.tf  main.tf  makes.nix  s3.tf  variables.tf
sorts/lint/: makes.nix
sorts/linters/: makes.nix
sorts/merge-features/: entrypoint.sh  main.nix
sorts/pipeline/: makes.nix
sorts/priority-update/: entrypoint.sh  main.nix
sorts/sorts/: __init__.py  constants.py  typings.py
sorts/static/: extensions.lst  neural_network.joblib  neural_network.joblib.REMOVED.git-id
sorts/test/: conftest.py  makes.nix  test_features.py  test_integrates.py  test_utils.py
sorts/tests/: makes.nix
sorts/train/: main.nix
sorts/training/: constants.py  entrypoint.sh  evaluate_results.py  main.nix  merge_features.py  requirements.txt  sagemaker_provisioner.py  training_script.py  training_script_tuning.py  tune_hyperparameters.py
sorts/training-and-tune/: main.nix
sorts/tune/: entrypoint.sh  main.nix
(+30458 files in other folders)
