[tool.poetry]
  authors = [
    "Product Team <development@fluidattacks.com>"
  ]
  classifiers = [
      "Development Status :: 1 - Beta",
      "Environment :: Console",
      "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
      "Topic :: Continuous Integration",
  ]
  description = "Merge Request validation tool"
  license = "MPL-2.0"
  name = "reviews"
  packages = [
    { include = "cli", from = "src" },
    { include = "config", from = "src" },
    { include = "core", from = "src" },
    { include = "dal", from = "src" },
    { include = "utils", from = "src" },
  ]
  readme = "./README.md"
  repository = "https://gitlab.com/fluidattacks/product/-/tree/master/reviews"
  version = "1.0.0"

[tool.poetry.dependencies]
  click = "7.1.2"
  dynaconf = "3.0.0"
  pygit2 = "1.2.1"
  python = "^3.7"
  python-gitlab = "2.4.0"

[tool.poetry.dev-dependencies]
  mypy = "0.782"
  prospector = "1.3.0"
  pydeps = "1.9.4"

[tool.poetry.scripts]
  reviews = 'cli:reviews'

[build-system]
  requires = [
    "poetry==1.0.9"
  ]
  build-backend = "poetry.masonry.api"
