[build-system]
requires = [
  "poetry==1.0.9"
]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = [
  "Product Team <development@fluidattacks.com>",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Topic :: Security",
]
description = "Deterministic vulnerability life-cycle reporting and closing tool"
license = "MPL-2.0"
name = "skims"
packages = [
  { include = "cli", from = "src" },
  { include = "core", from = "src" },
  { include = "integrates", from = "src" },
  { include = "lib_path", from = "src" },
  { include = "utils", from = "src" },
]
readme = "./README.md"
repository = "https://gitlab.com/fluidattacks/integrates/-/tree/master/skims"
version = "1.0.0"

[tool.poetry.dependencies]
aiofiles = "0.5.0"
aiogqlc = "1.0.5"
click = "7.1.2"
more-itertools = "8.4.0"
pillow = "7.2.0"
pyparsing = "2.4.7"
python = "^3.8"
"ruamel.yaml" = "0.16.10"
uvloop = "0.14.0"

[tool.poetry.dev-dependencies]
mypy = "0.782"
prospector = "1.3.0"
pydeps = "1.9.4"
pytest = "5.4.3"
pytest-asyncio = "0.14.0"
pytest-cov = "2.10.0"

[tool.poetry.scripts]
skims = 'cli:dispatch'
