[build-system]
requires = [
  "poetry==1.0.10"
]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = [
  "Product Team <development@fluidattacks.com>",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Topic :: Security",
]
description = "Deterministic vulnerability life-cycle reporting and closing tool"
include = [
  "static/**/*",
  "vendor/**/*",
]
license = "MPL-2.0"
name = "skims"
packages = [
  { include = "cli", from = "skims" },
  { include = "config", from = "skims" },
  { include = "core", from = "skims" },
  { include = "integrates", from = "skims" },
  { include = "lib_path", from = "skims" },
  { include = "nvd", from = "skims" },
  { include = "parse_grammar", from = "skims" },
  { include = "parse_json", from = "skims" },
  { include = "state", from = "skims" },
  { include = "utils", from = "skims" },
  { include = "zone", from = "skims" },
]
readme = "./README.md"
repository = "https://gitlab.com/fluidattacks/product/-/tree/master/skims"
version = "1.0.0"

[tool.poetry.dependencies]
aioextensions = "20.8.1478538"
aiofiles = "0.5.0"
aiogqlc = "2.0.0b1"
aiohttp = "3.6.2"
bugsnag = "3.8.0"
click = "7.1.2"
confuse = "1.3.0"
frozendict = "1.2"
jmespath = "0.10.0"
lark-parser = "0.9.0"
more-itertools = "8.4.0"
pillow = "7.2.0"
pyparsing = "2.4.7"
python = "^3.8"
requests = "2.24.0"
"ruamel.yaml" = "0.16.10"
semver = "2.10.2"
uvloop = "0.14.0"

[tool.poetry.dev-dependencies]
bandit = "1.6.2"
mypy = "0.782"
pdoc3 = "0.8.4"
prospector = "1.3.0"
pydeps = "1.9.4"
pytest = "5.4.3"
pytest-asyncio = "0.14.0"
pytest-cov = "2.10.0"
pytest-rerunfailures = "9.0"

[tool.poetry.scripts]
skims = 'cli:dispatch'
