[build-system]
requires = [
  "poetry==1.0.10"
]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = [
  "Product Team <development@fluidattacks.com>",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Topic :: Security",
]
description = "Deterministic vulnerability life-cycle reporting and closing tool"
include = [
  "static/**/*",
  "vendor/**/*",
]
license = "MPL-2.0"
name = "skims"
packages = [
  { include = "aws", from = "skims" },
  { include = "benchmark", from = "skims" },
  { include = "cli", from = "skims" },
  { include = "config", from = "skims" },
  { include = "core", from = "skims" },
  { include = "integrates", from = "skims" },
  { include = "lib_path", from = "skims" },
  { include = "nvd", from = "skims" },
  { include = "parse_antlr", from = "skims" },
  { include = "parse_babel", from = "skims" },
  { include = "parse_cfn", from = "skims" },
  { include = "parse_common", from = "skims" },
  { include = "parse_hcl2", from = "skims" },
  { include = "parse_java", from = "skims"},
  { include = "parse_java_properties", from = "skims"},
  { include = "parse_json", from = "skims" },
  { include = "serialization", from = "skims" },
  { include = "state", from = "skims" },
  { include = "utils", from = "skims" },
  { include = "zone", from = "skims" },
]
readme = "./README.md"
repository = "https://gitlab.com/fluidattacks/product/-/tree/master/skims"
version = "1.0.0"

[tool.poetry.dependencies]
aioextensions = "20.9.2315218"
aiofiles = "0.5.0"
aiogqlc = "2.0.0b1"
aiohttp = "3.6.2"
bugsnag = "3.8.0"
cfn-flip = "1.2.3"
click = "7.1.2"
confuse = "1.3.0"
frozendict = "1.2"
jmespath = "0.10.0"
lark-parser = "0.7.8"
metaloaders = "20.9.2566091"
more-itertools = "8.4.0"
networkx = "2.5"
oyaml = "0.9"
pillow = "7.2.0"
# Stated here so it works outside of Nix
# Requires: libgraphviz-dev
# Overriden in Nix by overridenPyPkgPyGraphviz
pygraphviz = "1.5"
pyparsing = "2.4.7"
python = "^3.8"
python-dateutil = "2.8.1"
python-hcl2 = "0.3.0"
python-jose = "3.2.0"
requests = "2.24.0"
"ruamel.yaml" = "0.16.10"
semver = "2.10.2"
uvloop = "0.14.0"


[tool.poetry.dev-dependencies]
bandit = "1.6.2"
mypy = "0.782"
pdoc3 = "0.8.4"
prospector = "1.3.0"
pydeps = "1.9.4"
pytest = "5.4.3"
pytest-asyncio = "0.14.0"
pytest-cov = "2.10.0"
pytest-rerunfailures = "9.0"

[tool.poetry.scripts]
skims = 'cli:dispatch'
