[build-system]
requires = [
  "poetry==1.1.0"
]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = [
  "Product Team <development@fluidattacks.com>",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Topic :: Security",
]
description = "Tool that prioritizes files of a git repository according to the likelihood of them having a vulnerability"
include = [
  "static/*",
]
license = "MPL-2.0"
name = "sorts"
packages = [
  { include = "cli", from = "sorts" },
  { include = "features", from = "sorts" },
  { include = "integrates", from = "sorts" },
  { include = "predict", from = "sorts" },
  { include = "training", from = "sorts" },
  { include = "utils", from = "sorts" },
]
readme = "./README.md"
repository = "https://gitlab.com/fluidattacks/product/-/tree/master/sorts"
version = "1.0.0"

[tool.poetry.dependencies]
click = "7.1.2"
GitPython = "3.1.9"
gql = "3.0.0a2"
joblib = "0.16.0"
more_itertools = "8.5.0"
mypy_extensions = "0.4.3"
numpy = "1.19.2"
pandas = "1.1.2"
PyDriller = "1.15.2"
python = "^3.8"
pytz = "2020.1"
scikit-learn = "0.23.2"

[tool.poetry.dev-dependencies]
mypy = "0.782"
prospector = "1.3.0"
pytest = "6.1.1"
pytest-cov = "2.10.1"
pytest-rerunfailures = "9.1.1"

[tool.poetry.scripts]
sorts = 'cli:execute_sorts'
