[metadata]
name = casbin-dynamodb-adapter
description = Casbin Adapter for DynamoDB
long_description = file: README.rst
url = https://fluidattacks.com/integrates
author = FluidAttacks Development Team
author_email = development@fluidattacks.com
license = Mozilla-2.0

classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
setup_requires =
    setuptools
install_requires =
    boto3 == 1.12.7
    boto3_type_annotations == 0.3.1
    casbin == 0.8.4

[sdist]
formats = zip
