[metadata]
name = casbin-in-memory-adapter
description = In-Memory Casbin Adapter
long_description = file: README.rst
url = https://gitlab.com/fluidattacks/integrates
author = FluidAttacks Development Team
author_email = development@fluidattacks.com
license = Mozilla-2.0

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
setup_requires =
    setuptools
install_requires =
    casbin == 0.8.4

[sdist]
formats = zip
