[tool.poetry]
name = "code_etl"
version = "1.0.0"
description = "Code ETL"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
fa_purity = "^1.8.0"
GitPython = "^3.1.14"
pathos = "^0.2.8"
postgres-client = "^1.0.0"
psycopg2 = "^2.9.1"
ratelimiter = "^1.2.0.post0"
redshift-client = "^0.5.2"
requests = "^2.25.1"
six = "^1.16.0"
types-click = "^7.1.8"
types-psycopg2 = "^2.9.0"
types-requests = "^2.27.16"
utils-logger = "^1.0.0"

[tool.poetry.scripts]
observes-etl-code-bin = 'code_etl.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
