[tool.poetry]
name = "asm_dal"
version = "1.0.0"
description = "ASM Synchronous Data Access Layer"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.104"
fa-purity = "^1.18.1"
mypy-boto3-dynamodb = "^1.23.0"
types-boto3= "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
