[tool.poetry]
name = "asm_dal"
version = "1.0.0"
description = "ASM Synchronous Data Access Layer"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.17.104"
click = "^8.0.0"
fa-purity = "^1.18.1"
mypy-boto3-dynamodb = "^1.23.0"
types-boto3 = "^1.0.2"
types-click = "^7.1.8"
utils-logger = "^1.0.0"

[tool.poetry.scripts]
asm-dal = 'asm_dal.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
