[tool.poetry]
name = "paginator"
version = "1.0.0"
description = "legacy lib paginator"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aioextensions = "^20.11.1621472"
Deprecated = "^1.2.12"
requests = "^2.25.1"
returns = "^0.16.0"
ratelimit = "^2.2.1"
ratelimit-stubs = "^2.2.1"
types-Deprecated = "^1.2.1"
pathos = "^0.2.8"
six = "^1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
