[tool.poetry]
name = "postgres_client"
version = "0.1.0"
description = ""
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "2.8.6"

[tool.poetry.dev-dependencies]
pytest = "5.2"
mypy = "0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
