[tool.poetry]
name = "singer_io"
version = "0.1.1"
description = ""
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "0.790"
prospector = "1.3.1"
pytest = "6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
