[tool.poetry]
name = "dynamo_etl_conf"
version = "0.1.0"
description = "Dynamo ETLs configuration"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fa-purity = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
