[project]
name = "dynamo_etl_conf"
description = "Dynamo ETLs configuration"
dynamic = ["version"]
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]

requires-python = ">=3.8"
dependencies = [
    "fa-purity >=1.21.1, <2.0.0",
    "redshift-client >=0.10.0, <1.0.0",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
