[project]
name = "dynamo_etl_conf"
description = "Google sheets ETL"
dynamic = ["version"]
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]

requires-python = ">=3.10"
dependencies = [
    "fa-purity >=1.27.0, <2.0.0",
]

[project.scripts]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
