[tool.poetry]
name = "batch_stability"
version = "1.0.0"
description = "Observes batch jobs stability reporter"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.56"
types-boto3= "^1.0.2"
mypy-boto3-batch = "^1.22.8"
bugsnag = "^4.0.2"
click = "^8.0.3"
fa-purity = "^1.17.0"

[tool.poetry.scripts]
observes-batch-stability = 'batch_stability.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
