[tool.poetry]
name = "job_last_success"
version = "1.0.0"
description = "job last success reporter"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
psycopg2 = "^2.9.1"

[tool.poetry.scripts]
job-last-success = 'job_last_success.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
