# SPDX-FileCopyrightText: 2022 Fluid Attacks <development@fluidattacks.com>
#
# SPDX-License-Identifier: MPL-2.0

[tool.poetry]
name = "job_last_success"
version = "1.0.0"
description = "job last success reporter"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
fa-purity = "^1.18.0"
psycopg2 = "^2.9.1"
redshift-client = "^0.7.0"
utils-logger = "^1.0.0"

[tool.poetry.scripts]
job-last-success = 'job_last_success.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
