[project]
name = "jobs_scheduler"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
requires-python = ">=3.10"
dependencies = [
    "click >=8.1.3, <9.0.0",
    "fa-purity >=1.23.0 , <2.0.0",
    "pytz >= 2021.1",
    "types-pytz >= 2021.3.5",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "Observes jobs schedule"
dynamic = ["version"]

[project.scripts]
observes-scheduler = 'jobs_scheduler.cli:main'

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
