[tool.poetry]
name = "jobs_scheduler"
version = "1.0.0"
description = "Observes jobs schedule"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
pytz = "^2021.1"
returns = "^0.19.0"
utils-logger = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
