[tool.poetry]
name = "update_s3_last_sync_date"
version = "0.1.0"
description = ""
authors = ["Product Team <development@fluidattacks.com>"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
update-s3-last-sync-date = 'update_s3_last_sync_date.cli:main'
