[tool.poetry]
name = "streamer_dynamodb"
version = "0.1.0"
authors = ["Product Team <development@fluidattacks.com>"]
description=""
packages = [
  { include = "streamer_dynamodb", from = "." }
]

[tool.poetry.dependencies]
python = "^3.6"
aioboto3 = "8.0.5"
aioextensions = "20.8.2087641"
aiomultiprocess = "0.8.0"

[tool.poetry.scripts]
streamer-dynamodb = 'streamer_dynamodb:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
