[tool.poetry]
name = "streamer_gitlab"
version = "0.1.0"
description = ""
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "3.6.2"
aioextensions = "20.8.2087641"
asgiref = "3.2.10"
pytest = "6.1.1"
pytest-asyncio = "0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
streamer-gitlab = 'streamer_gitlab.cli:parse_args'
