[tool.poetry]
name = "streamer_zoho_crm"
version = "0.1.0"
description = ""
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
packaging = "20.4"
requests = "2.25.0"
click = "7.1.2"
postgres-client = {path = "../../common/postgres_client"}
ratelimiter = "1.2.0"
singer-io = {path = "../../common/singer_io"}

[tool.poetry.dev-dependencies]
pytest = "5.2"
mypy = "0.790"
pytest-postgresql = "2.5.2"
prospector = "1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
zoho-crm-etl = 'streamer_zoho_crm.cli:main'
