[tool.poetry]
name = "tap_checkly"
version = "1.0.0"
description = "tap checkly - data extractor"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
returns = "^0.19.0"
fa_purity = "^1.13.0"
paginator = "^1.0.0"
purity = "^1.0.0"
singer_io = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
