[tool.poetry]
name = "tap_checkly"
version = "1.0.0"
description = "tap checkly - data extractor"
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
returns = "^0.19.0"
fa-purity = "^1.13.0"
paginator = "^1.0.0"
purity = "^1.0.0"
singer-io = "^1.0.0"
types-requests = "^2.27.20"

[tool.poetry.scripts]
tap-checkly = 'tap_checkly.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
