# SPDX-FileCopyrightText: 2022 Fluid Attacks <development@fluidattacks.com>
#
# SPDX-License-Identifier: MPL-2.0

[project]
name = "tap_gitlab"
authors = [
    {name = "Product Team", email = "development@fluidattacks.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "boto3 >=1.17.104, <2.0.0",
    "cachetools >=5.0.0, <6.0.0",
    "click >=8.0.1, <9.0.0",
    "fa-purity >=1.23.0, <2.0.0",
    "fa-singer-io >=1.4.0, <2.0.0",
    "more-itertools >=8.8.0, <9.0.0",
    "mypy-boto3-s3 >=1.23.0, <2.0.0",
    "paginator >=1.0.0, <2.0.0",
    "python-dateutil >=2.8.1, <3.0.0",
    "pytz >=2021.1, <2022.0",
    "requests >=2.25.1, <3.0.0",
    "returns >=0.16.0, <1.0.0",
    "singer-io >=1.0.0, <2.0.0",
    "types-cachetools >=5.0.1, <6.0.0",
    "types-boto3 >=1.0.2, <2.0.0",
    "types-requests >=2.26.0, <3.0.0",
    "types-pytz >=2021.3.0, <2022.0.0",
    "types-python-dateutil >=2.8.16, <3.0.0",
    "utils-logger-2 >=1.0.0, <2.0.0",
]
description = "Gitlab Tap"
dynamic = ["version"]

[project.scripts]
tap-gitlab = 'tap_gitlab.cli:main'

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
