[tool.poetry]
name = "tap_csv"
version = "0.1.0"
description = ""
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "7.1.2"
singer-io = {path = "../../common/singer_io"}

[tool.poetry.dev-dependencies]
pytest = "6.1.2"
mypy = "0.790"
prospector = "1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
