[tool.poetry]
name = "tap_gitlab"
version = "0.1.0"
description = ""
authors = ["Product Team <development@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.6.2"
aioextensions = "20.8.2087641"
asgiref = "3.2.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
